--- a/src/Web/BlazorWebAssemblyIndentityDemo.ClientApp/Shared/LoginDisplay.razor
+++ b/src/Web/BlazorWebAssemblyIndentityDemo.ClientApp/Shared/LoginDisplay.razor
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @inject NavigationManager Navigation
+@inject SignOutSessionStateManager SignOutManager
 
 <AuthorizeView>
     <Authorized>
@@ -13,8 +14,9 @@
 </AuthorizeView>
 
 @code{
-    private void BeginLogOut()
+    private async Task BeginLogOut()
     {
+        await SignOutManager.SetSignOutState();
         Navigation.NavigateToLogout("authentication/logout");
     }
 }
