fix: Build bug fixed.

--- a/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/Components/DropDown.razor
+++ b/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/Components/DropDown.razor
@@ -1,5 +1,5 @@
 ﻿<section>
-    <select class="form-control" @onchange="SelectedItemChanged">
+    <select class="form-select" @onchange="SelectedItemChanged">
         <option value="-1">@DefaultValue</option>
         @foreach (var item in Items)
         {
