--- a/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/Components/Users/UserTable.razor
+++ b/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/Components/Users/UserTable.razor
@@ -1,3 +1,55 @@
-﻿<h3>UserTable</h3>
-
+﻿@if (Users.Count > 0)
+{
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col"></th>
+                <th scope="col">First Name</th>
+                <th scope="col">Last Name</th>
+                <th scope="col">Email</th>
+                <th scope="col">Position</th>
+                <th scope="col">Roles</th>
+                <th scope="col">Update</th>
+                <th scope="col">Delete</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var user in Users)
+            {
+                <tr>
+                    <td>
+                        <img src="@user.ImageUrl" alt="User image" style="width:100px;" />
+                    </td>
+                    <td class="align-middle">
+                        @user.FirstName
+                    </td>
+                    <td class="align-middle">
+                        @user.LastName
+                    </td>
+                    <td class="align-middle">
+                        $@user.Email
+                    </td>
+                    <td class="align-middle">
+                        $@user.Position
+                    </td>
+                    <td class="align-middle">
+                        $@user.Roles
+                    </td>
+                    <td class="align-middle">
+                        <button type="button" class="btn btn-info" @onclick="() => RedirectToUpdate(user.Id)">Update</button>
+                    </td>
+                    <td class="align-middle">
+                        <button type="button" class="btn btn-danger" @onclick="() => Delete(user.Id)">Delete</button>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+else
+{
+    <span>
+        Loading products...
+    </span>
+}
 
