--- a/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/Pages/Users.razor
+++ b/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/Pages/Users.razor
@@ -1,6 +1,7 @@
 ﻿@page "/users"
 
 @using BlazorWebAssemblyIdentityDemo.ClientApp.Components
+@using BlazorWebAssemblyIdentityDemo.ClientApp.Components.Users
 @using Microsoft.AspNetCore.Authorization
 @attribute [Authorize(Roles = "Administrator")]
 
@@ -20,7 +21,11 @@
             <DropDown Items="MasterData.SortBy" DefaultValue="-- Sort By--" OnSelectedItemChanged="SortChanged" />
         </div>
         <div class="col-md">
+            <a href="/createProduct">Create Product</a>
         </div>
+    </div>
+    <div class="row">
+        <UserTable Users="UserList" OnDeleted="DeleteUser"></UserTable>
     </div>
 </div>
 
