--- a/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/_Imports.razor
+++ b/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/_Imports.razor
@@ -9,3 +9,5 @@
 @using Microsoft.JSInterop
 @using BlazorWebAssemblyIdentityDemo.ClientApp
 @using BlazorWebAssemblyIdentityDemo.ClientApp.Shared
+@using Radzen
+@using Radzen.Blazor
