--- a/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/Shared/NavMenu.razor
+++ b/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/Shared/NavMenu.razor
@@ -24,6 +24,26 @@
             </Authorized>
         </AuthorizeView>
 
+        <AuthorizeView Roles="Administrator">
+            <Authorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="productCategories">
+                        <span class="oi oi-plus" aria-hidden="true"></span> Product Category
+                    </NavLink>
+                </div>
+            </Authorized>
+        </AuthorizeView>
+
+        <AuthorizeView Roles="Administrator">
+            <Authorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="products">
+                        <span class="oi oi-plus" aria-hidden="true"></span> Product
+                    </NavLink>
+                </div>
+            </Authorized>
+        </AuthorizeView>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
