--- a/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/Pages/User/EditUser.razor
+++ b/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/Pages/User/EditUser.razor
@@ -51,4 +51,4 @@
     </div>
 </div>
 
-<SuccessNotification @ref="_notification" />
+<SuccessNotification @ref="_notification" RoutingPath="/Users" />
