--- a/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/Components/ProductCategories/ProductCategoryTable.razor
+++ b/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/Components/ProductCategories/ProductCategoryTable.razor
@@ -3,10 +3,11 @@
     <table class="table">
         <thead>
             <tr>
-                <th scope="col">Id</th>
-                <th scope="col">Name</th>
-                <th scope="col">Update</th>
-                <th scope="col">Delete</th>
+                <th scope="col" style="width:250px !important;">Id</th>
+                <th scope="col" style="width:100% !important;">Name</th>
+                <th scope="col" style="width:350px !important;">View Products</th>
+                <th scope="col" style="width:150px !important;">Update</th>
+                <th scope="col" style="width:150px !important;">Delete</th>
             </tr>
         </thead>
         <tbody>
@@ -18,6 +19,9 @@
                     </td>
                     <td class="align-middle">
                         @productCategory.Name
+                    </td>
+                    <td class="align-middle">
+                        <RadzenButton Variant="Variant.Flat" Shade="Shade.Dark" Text="View Products" ButtonStyle="ButtonStyle.Primary" />
                     </td>
                     <td class="align-middle">
                         <RadzenButton Variant="Variant.Flat" Shade="Shade.Dark" Click=@(args => RedirectToUpdate(productCategory.Id.ToString())) Text="Update" ButtonStyle="ButtonStyle.Primary" />
