--- a/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/Shared/NavMenu.razor
+++ b/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/Shared/NavMenu.razor
@@ -37,7 +37,7 @@
         <AuthorizeView Roles="Administrator">
             <Authorized>
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="products">
+                    <NavLink class="nav-link" href="products/0">
                         <span class="oi oi-plus" aria-hidden="true"></span> Product
                     </NavLink>
                 </div>
