product list implemented.

--- a/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/Pages/User/Users.razor
+++ b/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/Pages/User/Users.razor
@@ -21,7 +21,7 @@
             <DropDown Items="MasterData.SortBy" DefaultValue="-- Sort By--" OnSelectedItemChanged="SortChanged" />
         </div>
         <div class="col-md">
-            <a href="/addUser">Create Product</a>
+            <a href="/addUser">Create User</a>
         </div>
     </div>
     <br />
