--- a/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/Pages/Product/Products.razor
+++ b/src/Web/BlazorWebAssemblyIdentityDemo.ClientApp/Pages/Product/Products.razor
@@ -1,5 +1,30 @@
 ﻿@page "/products/{categoryId}"
 
-
+@using BlazorWebAssemblyIdentityDemo.ClientApp.Components
+@using BlazorWebAssemblyIdentityDemo.ClientApp.Components.Products
 @using Microsoft.AspNetCore.Authorization
 @attribute [Authorize(Roles = "Administrator")]
+
+<div class="container">
+    <div class="row">
+        <div class="col-md">
+             <TextSearchFilter OnSearchChanged="SearchChanged"/>
+        </div>
+        <div class="col-md">
+            <DropDown Items="_masterData.ProductCategories" DefaultValue="-- All--" OnSelectedItemChanged="ProductCategoryChange" />
+        </div>
+        <div class="col-md">
+            <a href="/addNewProduct">Create Product</a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <ProductTable Products="_products" OnDeleted="DeleteProduct"></ProductTable>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md">
+            <Pagination MetaData="_metaData" Spread="2" SelectedPage="SelectedPage"/>
+        </div>
+    </div>
+</div>
